# kernvind_backend

./: .gitignore  README.md  data_upload_service_build.bash  kernvind_service_build.bash  llm_chat_service_build.bash
data_models/: pyproject.toml
data_models/data_models/: bot_model.py  chat_message_model.py  datafeed_source_model.py  datasource_model.py  llm_model.py  user_model.py  vector_model.py
data_upload_service/app/: pyproject.toml
data_upload_service/app/src/: asgi.py  manage.py
data_upload_service/app/src/app/: __init__.py  config.py  database.py  load_creds.py  prod_local_creds_load.py  routes.py  set_logger.py
data_upload_service/app/src/app/data_upload/models/: datafeed_apache_kafka_model.py  datafeed_postgres_model.py  google_drive_auth_token_model.py  google_drive_file_metadata_model.py
data_upload_service/app/src/app/data_upload/services/: data_upload_service.py
kernvind/app/: pyproject.toml
kernvind/app/src/: asgi.py  config.py  manage.py
kernvind/app/src/app/: __init__.py  config.py  database.py  extensions.py  initial_database_data.py  load_creds.py  routes.py
kernvind/app/src/app/auth/controllers/: login_controller.py  signup_controller.py  social_auth_controller.py
kernvind/app/src/app/auth/models/: api_models.py  google_sign_in_model.py
kernvind/app/src/app/auth/services/: auth_services_utils.py  google_sign_in_service.py  user_auth_service.py
kernvind/app/src/app/bot/controllers/: bot_controller.py
kernvind/app/src/app/bot/models/: bot_add_datasource_model.py  bot_add_user_model.py  bot_details_model.py  bot_llm_change_model.py  bot_update_name_desc_model.py  chat_message_model.py  get_bot_list_model.py  new_bot_models.py
kernvind/app/src/app/bot/services/: bot_add_datasource_service.py  bot_add_user_service.py  bot_change_llm_service.py  bot_delete_service.py  bot_remove_datasource_service.py  bot_remove_user_service.py  bot_update_name_desc_service.py  create_bot.py  get_bot_details_service.py  get_bot_list.py  get_bot_messages_service.py
kernvind/app/src/app/core/models/: headers_model.py  user_claims_model.py
kernvind/app/src/app/datasource/controllers/: datasource_controller.py
kernvind/app/src/app/datasource/models/: datasource_datafeed_add_model.py  datasource_details_model.py  datasource_update_model.py  document_metadata_model.py  get_datasource_list_model.py  google_drive_auth_token_model.py  new_datasource_models.py
kernvind/app/src/app/datasource/services/: add_datafeed_service.py  create_datasource_service.py  delete_datafeed_service.py  delete_datasource_service.py  get_datasource_details_service.py  get_datasource_list_service.py  update_datasource_service.py
kernvind/app/src/app/dataupload/controllers/: dataupload_playground_controller.py
kernvind/app/src/app/dataupload/models/: document_metadata_model.py
kernvind/app/src/app/dataupload/services/: payground_file_upload_service.py
kernvind/app/src/app/playground/models/: playground_file_upload_model.py
kernvind/app/src/app/playground/services/: payground_file_upload_service.py
kernvind/app/src/app/user_llm/controllers/: llm_list_controller.py  user_llm_controller.py
kernvind/app/src/app/user_llm/models/: user_llm_details_model.py  user_llm_model.py  user_llm_update_model.py
kernvind/app/src/app/user_llm/services/: create_user_llm_service.py  delete_user_llm_service.py  get_user_llm_details_service.py  get_user_llm_list_service.py  llm_list_service.py  update_user_llm_service.py
llm_chat_service/app/: pyproject.toml
llm_chat_service/app/src/: config.py  manage.py  settings.py
llm_chat_service/app/src/app/: __init__.py  config.py  database.py  load_creds.py  routes.py  set_logger.py
llm_chat_service/app/src/app/core/constants/: llm_constants.py
llm_chat_service/app/src/app/core/models/: error_model.py  model_validators.py  playground_jwt_model.py  success_model.py  user_claims_model.py
llm_chat_service/app/src/app/llm_chat/controllers/: chat_controller.py  playground_chat_controller.py
llm_chat_service/app/src/app/llm_chat/model/: bot_user_llm_model.py  playground_chat_message_model.py
llm_chat_service/app/src/app/llm_chat/services/: broker.py  (+8 more)
llm_chat_service/app/tests/: conftest.py  test_broker.py  test_chat_controller.py
(+30 files in other folders)
