[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["bsinghvt <baljotsingh1986@yahoo.com>"]
readme = "README.md"
packages = [{include = "app", from = "src"}]

[tool.poetry.scripts]
start_dev = "manage:dev_app"

[tool.poetry.dependencies]
python = "^3.12"
quart = "^0.19.6"
python-dotenv = "^1.0.1"
quart-schema = {extras = ["pydantic"], version = "^0.20.0"}
quart-jwt-extended = {extras = ["asymmetric-crypto"], version = "^0.1.0"}
crypto-lib = {path = "../../crypto_lib"}
quart-cors = "^0.7.0"
tortoise-orm = {extras = ["asyncpg"], version = "^0.21.6"}
redis = {extras = ["hiredis"], version = "^5.1.1"}
langchain-postgres = "^0.0.12"
psycopg = {extras = ["binary"], version = "^3.2.2"}
langchain-huggingface = "^0.1.0"
langchain-ollama = "^0.2.0"
langchain-community = "^0.3.2"
langchain-openai = "^0.2.5"
data-models = {path = "../../data_models"}
pydantic = "^2.10.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
pytest-asyncio = "^0.23.7"
coverage = "^7.6.9"
pytest-mock = "^3.14.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
